fix: navigation__social alignment baseline

--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,7 @@ img {
   list-style: none;
   display: flex;
   justify-content: space-evenly;
+  align-items: baseline;
   /* to center absolutely positioned element  */
   width: 50%;
   position: absolute;
